--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>glee | Main</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/x-icon" sizes="16x16" href="images/favicon/favicon.ico">
+  <link rel="manifest" href="images/favicon/site.webmanifest">
+  <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#1e0b0b">
+  <title>glee | MainPage</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -61,7 +68,7 @@
 
         <div class="header__user-nav user-nav">
 
-          <a class="user-nav__link" href="#">
+          <a class="user-nav__link" href="#">to find something
             <svg xmlns="http://www.w3.org/2000/svg" width="15.281" height="15.281" viewBox="0 0 15.281 15.281">
 
               <path fill=" #243f4d"
@@ -72,7 +79,7 @@
 
           <div class="user-nav__cabinet">
 
-            <a class="user-nav__link" href="#">
+            <a class="user-nav__link" href="#">my favorite staff
               <svg width="17.87" height="15.531" viewBox="0 0 17.87 15.531">
                 <path fill=" #243f4d"
                   d="M1648.91,86.245a0.731,0.731,0,0,1-.28-0.056c-0.35-.15-8.65-3.749-8.65-10.76a28.181,28.181,0,0,0,13.05-4.707,4.817,4.817,0,0,1,4.81,4.684c0,7.034-8.29,10.634-8.65,10.783A0.7,0.7,0,0,1,1648.91,86.245Zm-4.11-14.138a3.427,3.427,0,0,0-3.41,3.346c0,5.407,6.13,8.662,7.52,9.334,1.4-.672,7.52-3.93,7.52-9.358a3.406,3.406,0,0,0-6.81.024,0.709,0.709,0,0,1-.71.669h0a0.694,0.694,0,0,1-.7-0.669A3.427,3.427,0,0,0,1644.8,72.106Z"
@@ -81,7 +88,7 @@
               <span>0</span>
             </a>
 
-            <a class="user-nav__link" href="#">
+            <a class="user-nav__link" href="#">my basket icon
               <svg width="18.938" height="16.969" viewBox="0 0 18.938 16.969">
                 <path fill=" #243f4d"
                   d="M5.526,16.978a2.073,2.073,0,0,1,0-4.147H5.533A2.073,2.073,0,0,1,5.526,16.978Zm0.006-2.963h0a0.884,0.884,0,1,0,.628.258,0.887,0.887,0,0,0-.628-0.258Zm8.386,2.963a2.073,2.073,0,0,1,0-4.147h0a1.936,1.936,0,0,1,1.468.6,2.076,2.076,0,0,1-.667,3.383A2.1,2.1,0,0,1,13.918,16.978Zm0.006-2.963h0a0.978,0.978,0,0,0-.823.548,0.888,0.888,0,1,0,1.449-.291A0.9,0.9,0,0,0,13.924,14.015Zm-11.279.164a0.584,0.584,0,0,1-.25-0.056,0.592,0.592,0,0,1-.286-0.787,3.681,3.681,0,0,1,3.054-2.151L4.108,5.793a0.592,0.592,0,1,1,1.163-.227l1.091,5.578h9.423l1.807-6.771H4.29A4.354,4.354,0,0,1,.007.68,0.592,0.592,0,1,1,1.178.505,3.165,3.165,0,0,0,4.293,3.187h14.07a0.594,0.594,0,0,1,.573.745l-2.123,7.956a0.594,0.594,0,0,1-.573.44H5.885a0.043,0.043,0,0,0-.023,0,2.655,2.655,0,0,0-2.68,1.51A0.593,0.593,0,0,1,2.645,14.178Z" />
@@ -91,7 +98,7 @@
 
           </div>
 
-          <a class="user-nav__link" href="#">
+          <a class="user-nav__link" href="#">drop menu icon
             <svg width="20.031" height="20.031" viewBox="0 0 20.031 20.031">
               <path fill=" #243f4d"
                 d="M2.146,4.881A2.146,2.146,0,1,1,4.292,2.735,2.144,2.144,0,0,1,2.146,4.881Zm0,7.869A2.146,2.146,0,1,1,4.292,10.6,2.145,2.145,0,0,1,2.146,12.75Zm0,7.868a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,2.146,20.618ZM10.014,4.881A2.146,2.146,0,1,1,12.16,2.735,2.144,2.144,0,0,1,10.014,4.881Zm0,7.869A2.146,2.146,0,1,1,12.16,10.6,2.145,2.145,0,0,1,10.014,12.75Zm0,7.868a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,10.014,20.618ZM17.883,4.881a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,17.883,4.881Zm0,7.869A2.146,2.146,0,1,1,20.029,10.6,2.145,2.145,0,0,1,17.883,12.75Zm0,7.868a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,17.883,20.618Z"
@@ -99,11 +106,9 @@
             </svg>
           </a>
         </div>
-
       </div>
     </div>
   </header>
-
 
   <main class="main">
 
@@ -231,7 +236,7 @@
               <div class="week__card card mix category-chairs" data-order="2">
 
                 <div class="card__image">
-                  <img class="card__img" src="images/product/product2.jpg" alt="product-foto">
+                  <img class="card__img" src="images/product/product1.jpg" alt="product-foto">
                 </div>
 
                 <div class="card__info">
@@ -268,7 +273,7 @@
               <div class="week__card card mix category-chairs" data-order="3">
 
                 <div class="card__image">
-                  <img class="card__img" src="images/product/product3.jpg" alt="product-foto">
+                  <img class="card__img" src="images/product/product2.jpg" alt="product-foto">
                 </div>
 
                 <div class="card__info">
@@ -305,7 +310,7 @@
               <div class="week__card card mix category-chairs" data-order="4">
 
                 <div class="card__image">
-                  <img class="card__img" src="images/product/product4.jpg" alt="product-foto">
+                  <img class="card__img" src="images/product/product3.jpg" alt="product-foto">
                 </div>
 
                 <div class="card__info">
@@ -342,7 +347,7 @@
               <div class="week__card card mix category-chairs" data-order="5">
 
                 <div class="card__image">
-                  <img class="card__img" src="images/product/product5.jpg" alt="product-foto">
+                  <img class="card__img" src="images/product/product4.jpg" alt="product-foto">
                 </div>
 
                 <div class="card__info">
@@ -375,6 +380,43 @@
                   </button>
                 </div>
               </div>
+
+               <div class="week__card card mix category-furnitures category-chairs" data-order="8">
+
+                 <div class="card__image">
+                   <img class="card__img" src="images/product/product5.jpg" alt="product-foto">
+                 </div>
+
+                 <div class="card__info">
+                   <h4 class="card__name">Retro table</h4>
+                   <p class="card__price">$29.00</p>
+                 </div>
+
+                 <div class="card__links">
+                   <a class="card__link" data-fancybox="week__gallery" href="images/product/product8.jpg">
+                     <svg width="20" height="20" viewBox="0 0 20 20">
+                       <path fill="#a3bbc8"
+                         d="M759.45,1579.8l-4.588-4.59a8.827,8.827,0,0,1-2.651,2.65l4.588,4.59A1.874,1.874,0,0,0,759.45,1579.8Zm-4.45-9.3a7.5,7.5,0,1,0-7.5,7.5A7.5,7.5,0,0,0,755,1570.5Zm-7.5,5.62a5.625,5.625,0,1,1,5.625-5.62A5.628,5.628,0,0,1,747.5,1576.12Zm-4.375-5.62h1.25a3.135,3.135,0,0,1,3.125-3.13v-1.25A4.386,4.386,0,0,0,743.125,1570.5Z"
+                         transform="translate(-740 -1563)" />
+                     </svg>
+                   </a>
+
+                   <button class="card__btn-basket" type="button">
+                     <svg width="22" height="20" viewBox="0 0 22 20">
+                       <path fill="#a3bbc8"
+                         d="M800.814,1564.63h2.333l3.323,12.04a0.812,0.812,0,0,0,.787.59h10.214a0.821,0.821,0,0,0,.746-0.48l3.717-8.56a0.836,0.836,0,0,0-.068-0.78,0.813,0.813,0,0,0-.678-0.37H809.9a0.82,0.82,0,0,0,0,1.64H819.94l-3.011,6.92h-9.062l-3.323-12.03a0.808,0.808,0,0,0-.787-0.6h-2.943A0.815,0.815,0,0,0,800.814,1564.63Zm5.67,18.37a1.85,1.85,0,1,0-1.845-1.85A1.85,1.85,0,0,0,806.484,1583Zm11.53,0h0.135A1.907,1.907,0,1,0,818.014,1583Z"
+                         transform="translate(-800 -1563)" />
+                     </svg>
+                   </button>
+
+                   <button class="card__btn-heart" type="button">
+                     <svg width="22px" height="18px">
+                       <path fill="#a3bbc8"
+                         d="M21.990,5.820 C21.907,4.269 21.250,2.813 20.141,1.720 C19.016,0.610 17.545,-0.001 16.002,-0.001 C13.691,-0.001 12.054,1.784 11.175,2.744 C11.125,2.798 11.071,2.857 11.019,2.913 C10.991,2.882 10.963,2.849 10.936,2.819 C10.132,1.903 8.460,-0.001 5.998,-0.001 C4.455,-0.001 2.985,0.610 1.859,1.720 C0.750,2.813 0.093,4.269 0.010,5.820 C-0.072,7.361 0.320,8.700 1.281,10.158 C2.142,11.466 4.385,13.532 6.044,14.906 C7.749,16.317 9.994,17.999 11.009,17.999 C12.041,17.999 14.278,16.319 15.974,14.912 C17.620,13.545 19.850,11.480 20.720,10.158 C21.366,9.174 22.095,7.792 21.990,5.820 ZM19.614,9.430 C18.982,10.391 17.202,12.166 15.183,13.848 C12.777,15.852 11.352,16.643 11.011,16.674 C10.669,16.639 9.241,15.841 6.823,13.831 C4.793,12.145 3.010,10.377 2.386,9.429 C1.591,8.223 1.266,7.132 1.332,5.891 C1.467,3.372 3.560,1.322 5.998,1.322 C7.861,1.322 9.214,2.864 9.941,3.692 C10.369,4.180 10.604,4.447 11.000,4.447 C11.409,4.447 11.672,4.161 12.151,3.638 C12.945,2.772 14.273,1.322 16.002,1.322 C18.440,1.322 20.533,3.372 20.668,5.891 C20.735,7.145 20.420,8.204 19.614,9.430 Z" />
+                     </svg>
+                   </button>
+                 </div>
+               </div>
 
               <div class="week__card card mix category-furnitures category-lighting" data-order="6">
 
@@ -490,268 +532,7 @@
           </div>
         </div>
       </div>
-
-      <div class="container-fluid">
-        <div class="week__bottom">
-
-          <div class="week__product product">
-            <div class="product__image">
-              <img class="product__img" src="images/product/lamp1.png" alt="product-lamp">
-            </div>
-
-            <div class="product__descr">
-              <div class="product__box">
-
-                <h4 class="product__name">Mirum Notare Tellus</h4>
-                <p class="product__characteristics">LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight</p>
-                <a class="product__link" href="#">View More </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="week__product product">
-            <div class="product__image">
-              <img class="product__img" src="images/product/lamp2.png" alt="product-lamp">
-            </div>
-
-            <div class="product__descr">
-              <div class="product__box">
-
-                <h4 class="product__name">Malesuada Tempor
-                  Euismod</h4>
-                <p class="product__characteristics">50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight
-                </p>
-                <a class="product__link" href="#">View More </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
-
-    <section class="new">
-      <div class="container">
-        <h3 class="new__title title">New Design</h3>
-        <div class="new__box">
-          <ul class="new__filters">
-            <li class="new__filter">
-              <button class="new__btn mixitup-control-active" type="button" data-filter="all">
-                All
-              </button>
-            </li>
-
-            <li class="new__filter">
-              <button class="new__btn mixitup-control-active" type="button" data-filter=".category-furnitures1">
-                Furnitures
-              </button>
-            </li>
-
-            <li class="new__filter">
-              <button class="new__btn" type="button" data-filter=".category-chairs1">
-                Chairs
-              </button>
-            </li>
-
-            <li class="new__filter">
-              <button class="new__btn" type="button" data-filter=".category-lighting1">
-                Lighting
-              </button>
-            </li>
-
-            <li class="new__filter">
-              <button class="new__btn" type="button" data-filter=".category-decor1">
-                Decor
-              </button>
-            </li>
-
-          </ul>
-
-          <div class="new__gallery" id="MixItUp2">
-
-            <div class="new__object object mix category-lighting1 category-decor1" data-order="9">
-              <div class="object__info">
-                <h4 class="object__title">
-                  <a class="object__title-link" href="#">
-                    Lampe Sur Pieds
-                    Bamboo
-                  </a>
-                </h4>
-                <p class="object__type">Classic</p>
-              </div>
-
-              <div class="object__image">
-                <img class="object__img" src="images/product/object1.png" alt="object-photo">
-              </div>
-            </div>
-
-            <div class="new__object object mix category-decor1" data-order="10">
-              <div class="object__info">
-                <h4 class="object__title">
-                  <a class="object__title-link" href="#">
-                    Lampe Sur Pieds
-                    Bamboo
-                  </a>
-                </h4>
-                <p class="object__type">Classic</p>
-              </div>
-
-              <div class="object__image">
-                <img class="object__img" src="images/product/object2.png" alt="object-photo">
-              </div>
-            </div>
-
-            <div class="new__object object mix category-chairs1" data-order="11">
-              <div class="object__info">
-                <h4 class="object__title">
-                  <a class="object__title-link" href="#">
-                    Rattan Rocking
-                    Chair
-                  </a>
-                </h4>
-                <p class="object__type">Classic</p>
-              </div>
-
-              <div class="object__image">
-                <img class="object__img" src="images/product/object3.png" alt="object-photo">
-              </div>
-            </div>
-
-            <div class="new__object object mix category-decor1" data-order="12">
-              <div class="object__info">
-                <h4 class="object__title">
-                  <a class="object__title-link" href="#">
-                    Rattan Rocking
-                    Chair
-                  </a>
-                </h4>
-                <p class="object__type">Classic</p>
-              </div>
-
-              <div class="object__image">
-                <img class="object__img" src="images/product/object4.png" alt="object-photo">
-              </div>
-            </div>
-
-            <div class="new__object object mix category-chairs1 category-decor1" data-order="13">
-              <div class="object__info">
-                <h4 class="object__title">
-                  <a class="object__title-link" href="#">
-                    Rattan Rocking
-                    Chair
-                  </a>
-                </h4>
-                <p class="object__type">Classic</p>
-              </div>
-
-              <div class="object__image">
-                <img class="object__img" src="images/product/object5.png" alt="object-photo">
-              </div>
-            </div>
-
-            <div class="new__object object mix category-decor1" data-order="14">
-              <div class="object__info">
-                <h4 class="object__title">
-                  <a class="object__title-link" href="#">
-                    Lampe Sur Pieds
-                    Bamboo
-                  </a>
-                </h4>
-                <p class="object__type">Classic</p>
-              </div>
-
-              <div class="object__image">
-                <img class="object__img" src="images/product/object6.png" alt="object-photo">
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-
-
-    <div class="video">
-      <a class="video__link" data-fancybox="video--background" href="https://youtu.be/7q6MeN7cc_4">
-        <img class="video__img" src="images/icon/video-button.png" alt="video-button">
-      </a>
-    </div>
-
-
-    <div class="insights">
-      <div class="container">
-        <div class="insights__top">
-
-          <h4 class="insights__title title">Our Insights & Articles</h4>
-          <a href="#" class="insights__link">View All</a>
-        </div>
-        
-        <div class="insights__inner">
-
-          <div class="insights__card">
-            <img class="insights__img" src="images/product/insights1.jpg" alt="insights-photo">
-
-            <div class="insights__bottom">
-
-              <span class="insights__label">NEWS</span>
-
-              <p class="insights__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                veniam</p>
-
-              <data class="insights__data">28 JANUARY, 2020
-                <span class="insights__author">
-                  BY ADMIN
-                </span>
-              </data>
-            </div>
-          </div>
-
-          <div class="insights__card">
-
-            <img class="insights__img" src="images/product/insights2.jpg" alt="insights-photo">
-
-            <div class="insights__bottom">
-
-              <span class="insights__label">NEWS</span>
-
-              <p class="insights__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                veniam</p>
-
-              <data class="insights__data">28 JANUARY, 2020
-                <span class="insights__author">
-                  BY ADMIN
-                </span>
-              </data>
-            </div>
-          </div>
-
-          <div class="insights__card">
-            <img class="insights__img" src="images/product/insights3.jpg" alt="insights-photo">
-
-            <div class="insights__bottom">
-
-              <span class="insights__label">NEWS</span>
-
-              <p class="insights__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                veniam</p>
-
-              <data class="insights__data">28 JANUARY, 2020
-                <span class="insights__author">
-                  BY ADMIN
-                </span>
-              </data>
-            </div>
-          </div>
-          
-        </div>
-      </div>
-    </div>
-
-
-
-
-
 
 
   </main>
@@ -833,7 +614,6 @@
           </form>
 
         </div>
-
       </div>
 
       <div class="footer__copy">
