fix adaptive main page

--- a/app/product-grid.html
+++ b/app/product-grid.html
@@ -27,7 +27,7 @@
         <ul class="header__menu-items">
 
           <li class="header__item header__item--active drop-menu">
-            <a class="header__menu-link " href="#">
+            <a class="header__menu-link " href="index.html">
               Home
             </a>
             <ul class="drop-menu__list">
@@ -47,7 +47,7 @@
           </li>
 
           <li class="header__item">
-            <a class="header__menu-link" href="#">
+            <a class="header__menu-link" href="about-us.html">
               About
             </a>
           </li>
@@ -64,7 +64,7 @@
             </a>
             <ul class="drop-menu__list">
               <li class="drop-menu__item">
-                <a class="drop-menu__link" href="#">item1</a>
+                <a class="drop-menu__link" href="product-grid.html">Product-list</a>
               </li>
               <li class="drop-menu__item">
                 <a class="drop-menu__link" href="#">item2</a>
@@ -79,7 +79,7 @@
           </li>
 
           <li class="header__item">
-            <a class="header__menu-link" href="#">
+            <a class="header__menu-link" href="#insights">
               News
             </a>
           </li>
@@ -90,7 +90,6 @@
             </a>
           </li>
         </ul>
-
 
         <div class="header__user-nav user-nav">
 
@@ -151,7 +150,7 @@
             <ul class="bredcrumbs__list">
 
               <li class="bredcrumbs__item">
-                <a class="bredcrumbs__link" href="#">Home </a>
+                <a class="bredcrumbs__link" href="#index.html">Home </a>
               </li>
 
               <li class="bredcrumbs__item bredcrumbs__item--active">
@@ -824,40 +823,33 @@
 
       <div class="bottom">
         <div class="container">
-          <ul class="bottom__sponsors">
-            <li class="insights__sponsor">
-              <div class="sponsor">
+          <div class="bottom__swiper swiper-container">
+            <div class="bottom__wrapper swiper-wrapper">
+              <div class="sponsor swiper-slide">
                 <img class="sponsor__sponsor-img" src="images/sponsors/sponsor1.png" alt="sponsor">
               </div>
-            </li>
-
-            <li class="insights__sponsor">
-              <div class="sponsor">
+              <div class="sponsor swiper-slide">
                 <img class="sponsor__sponsor-img" src="images/sponsors/sponsor2.png" alt="sponsor">
               </div>
-            </li>
-
-            <li class="insights__sponsor">
-              <div class="sponsor">
+              <div class="sponsor swiper-slide">
                 <img class="sponsor__sponsor-img" src="images/sponsors/sponsor3.png" alt="sponsor">
               </div>
-            </li>
-
-            <li class="insights__sponsor">
-              <div class="sponsor">
+              <div class="sponsor swiper-slide">
                 <img class="sponsor__sponsor-img" src="images/sponsors/sponsor4.png" alt="sponsor">
               </div>
-            </li>
-
-            <li class="insights__sponsor">
-              <div class="sponsor">
+              <div class="sponsor swiper-slide">
                 <img class="sponsor__sponsor-img" src="images/sponsors/sponsor5.png" alt="sponsor">
               </div>
-            </li>
-          </ul>
+              <div class="sponsor swiper-slide">
+                <img class="sponsor__sponsor-img" src="images/sponsors/sponsor1.png" alt="sponsor">
+              </div>
+              <div class="sponsor swiper-slide">
+                <img class="sponsor__sponsor-img" src="images/sponsors/sponsor2.png" alt="sponsor">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
 
     </main>
 
