--- a/app/about-us.html
+++ b/app/about-us.html
@@ -10,7 +10,7 @@
   <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#1e0b0b">
-  <title>glee | template</title>
+  <title>About us</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -53,7 +53,7 @@
          </li>
 
          <li class="header__item">
-           <a class="header__menu-link" href="index.html/services">
+           <a class="header__menu-link" href="index.html#services">
              Services
            </a>
          </li>
@@ -243,7 +243,7 @@
         </div>
       </div>
 
-       <!-- <section class="our">
+        <section class="our">
         <div class="container">
           <div class="our__inner">
              <div class="our__about">
@@ -287,6 +287,7 @@
                   </div>
                 </article>
               </li>
+
               <li class="our__item">
                 <article class="our-profile" style="background-image: url('images/team/roscoe.jpg');">
                   <div class="our-profile__inner">
@@ -313,6 +314,7 @@
                   </div>
                 </article>
               </li>
+
               <li class="our__item">
                 <article class="our-profile" style="background-image: url('images/team/ruby.jpg');">
                   <div class="our-profile__inner">
@@ -339,6 +341,7 @@
                   </div>
                 </article>
               </li>
+
               <li class="our__item">
                 <article class="our-profile" style="background-image: url('images/team/marie.jpg');">
                   <div class="our-profile__inner">
@@ -368,9 +371,9 @@
             </ul> 
           </div>
         </div>
-      </section> -->
+      </section>
 
-       <!-- <section class="insights" id="insights">
+       <section class="insights" id="insights">
         <div class="container">
           <div class="insights__top">
 
@@ -509,7 +512,7 @@
             </ul>
           </div>
         </div>
-      </section> -->
+      </section>
 
     </main>
 
