--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
         <ul class="header__menu-items">
 
           <li class="header__item header__item--active drop-menu">
-            <a class="header__menu-link " href="index.html">
+            <a class="header__menu-link " href="#">
               Home
             </a>
             <ul class="drop-menu__list">
@@ -346,8 +346,7 @@
                     </svg>
                   </button>
 
-                  <button class="product-card__icon product-card__icon--btn-active "
-                    type="button">it is
+                  <button class="product-card__icon product-card__icon--btn-active " type="button">it is
                     like icon
                     <svg width="22px" height="18px">
                       <path fill="#a3bbc8"
@@ -739,7 +738,7 @@
                   <p class="object-new__type">Classic</p>
                 </div>
               </a>
-            </article> 
+            </article>
 
           </div>
 
@@ -848,46 +847,32 @@
         <div class="insights__companies">
           <div class="container">
             <ul class="insights__sponsors sponsors">
-              <li class="insights__sponsor">
-                <div class="sponsor">
-                  <img class="sponsor__sponsor-img" src="images/sponsors/sponsor1.png" alt="sponsor">
-                </div>
+              <li class="sponsor">
+                <img class="sponsor__img" src="images/sponsors/sponsor1.png" alt="sponsor">
               </li>
 
-              <li class="insights__sponsor">
-                <div class="sponsor">
-                  <img class="sponsor__sponsor-img" src="images/sponsors/sponsor2.png" alt="sponsor">
-                </div>
+              <li class="sponsor">
+                <img class="sponsor__img" src="images/sponsors/sponsor2.png" alt="sponsor">
               </li>
 
-              <li class="insights__sponsor">
-                <div class="sponsor">
-                  <img class="sponsor__sponsor-img" src="images/sponsors/sponsor3.png" alt="sponsor">
-                </div>
+              <li class="sponsor">
+                <img class="sponsor__img" src="images/sponsors/sponsor3.png" alt="sponsor">
               </li>
 
-              <li class="insights__sponsor">
-                <div class="sponsor">
-                  <img class="sponsor__sponsor-img" src="images/sponsors/sponsor4.png" alt="sponsor">
-                </div>
+              <li class="sponsor">
+                <img class="sponsor__img" src="images/sponsors/sponsor4.png" alt="sponsor">
               </li>
 
-              <li class="insights__sponsor">
-                <div class="sponsor">
-                  <img class="sponsor__sponsor-img" src="images/sponsors/sponsor5.png" alt="sponsor">
-                </div>
+              <li class="sponsor">
+                <img class="sponsor__img" src="images/sponsors/sponsor5.png" alt="sponsor">
               </li>
 
-              <li class="insights__sponsor">
-                <div class="sponsor">
-                  <img class="sponsor__sponsor-img" src="images/sponsors/sponsor1.png" alt="sponsor">
-                </div>
+              <li class="sponsor">
+                <img class="sponsor__img" src="images/sponsors/sponsor1.png" alt="sponsor">
               </li>
 
-              <li class="insights__sponsor">
-                <div class="sponsor">
-                  <img class="sponsor__sponsor-img" src="images/sponsors/sponsor2.png" alt="sponsor">
-                </div>
+              <li class="sponsor">
+                <img class="sponsor__img" src="images/sponsors/sponsor2.png" alt="sponsor">
               </li>
 
 
