--- a/app/about-us.html
+++ b/app/about-us.html
@@ -26,7 +26,7 @@
 
         <ul class="header__menu-items">
 
-          <li class="header__item header__item--active drop-menu">
+          <li class="header__item  drop-menu">
             <a class="header__menu-link " href="#">
               Home
             </a>
@@ -46,14 +46,14 @@
             </ul>
           </li>
 
-          <li class="header__item">
+          <li class="header__item header__item--active">
             <a class="header__menu-link" href="about-us.html">
               About
             </a>
           </li>
 
           <li class="header__item">
-            <a class="header__menu-link" href="index.html#services">
+            <a class="header__menu-link" href="#services">
               Services
             </a>
           </li>
@@ -94,44 +94,33 @@
         <div class="header__user-nav user-nav">
 
           <a class="user-nav__item user-nav__item--find" href="#">to find something
-            <svg xmlns="http://www.w3.org/2000/svg" width="15.281" height="15.281" viewBox="0 0 15.281 15.281">
-
-              <path fill=" #243f4d"
-                d="M3.7,6.076a0.613,0.613,0,0,1,.745.485,2.656,2.656,0,0,0,.78,1.489,3.044,3.044,0,0,0,1.494.777,0.634,0.634,0,0,1,.487.743,0.643,0.643,0,0,1-.714.515A4.117,4.117,0,0,1,3.215,6.818,0.608,0.608,0,0,1,3.7,6.076ZM6.98,0a6.257,6.257,0,0,1,5.711,8.861l2.336,2.036c1.7,1.746.745,3.266,0.293,3.717-0.421.454-1.993,1.414-3.731-.292l-2.059-2.35A6.261,6.261,0,1,1,6.98,0Zm5.546,13.517a1.355,1.355,0,0,0,1.881.226,1.312,1.312,0,0,0-.228-1.874l-2.161-1.88a6.269,6.269,0,0,1-1.363,1.34ZM6.98,11.2A4.948,4.948,0,1,0,2.015,6.253,4.958,4.958,0,0,0,6.98,11.2Z"
-                transform="translate(-0.719)" />
+            <svg class="user-nav__svg">
+              <use xlink:href="images/sprite.svg#icon-search"></use>
             </svg>
           </a>
 
           <div class="user-nav__cabinet">
 
             <a class=" user-nav__item user-nav__item--heart" href="#">my favorite staff
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px"
-                height="17px">
-                <path fill-rule="evenodd" fill=" #243f4d"
-                  d="M9.913,16.244 C9.818,16.244 9.722,16.226 9.633,16.188 C9.280,16.039 0.983,12.439 0.983,5.429 C1.074,2.779 3.190,0.721 5.801,0.721 C7.544,0.721 9.067,1.639 9.913,3.031 C10.760,1.639 12.282,0.721 14.025,0.721 C16.634,0.721 18.750,2.779 18.842,5.405 C18.842,12.439 10.545,16.039 10.193,16.188 C10.103,16.226 10.008,16.244 9.913,16.244 ZM5.801,2.106 C3.954,2.106 2.458,3.576 2.393,5.452 C2.393,10.860 8.518,14.115 9.913,14.787 C11.308,14.115 17.433,10.857 17.433,5.429 C17.368,3.576 15.870,2.106 14.025,2.106 C12.180,2.106 10.683,3.576 10.617,5.452 C10.605,5.825 10.293,6.121 9.913,6.121 L9.913,6.121 C9.533,6.121 9.221,5.825 9.208,5.452 C9.144,3.576 7.647,2.106 5.801,2.106 Z" />
+              <svg class="user-nav__svg">
+                <use xlink:href="images/sprite.svg#icon-heart"></use>
               </svg>
+
               <span>0</span>
             </a>
 
             <a class=" user-nav__item user-nav__item--basket" href="#">my basket icon
-              <svg xmlns="http://www.w3.org/2000/svg" width="18.938" height="16.969" viewBox="0 0 18.938 16.969">
-                <defs>
-
-                </defs>
-                <path fill=" #243f4d"
-                  d="M5.526,16.978a2.073,2.073,0,0,1,0-4.147H5.533A2.073,2.073,0,0,1,5.526,16.978Zm0.006-2.963h0a0.884,0.884,0,1,0,.628.258,0.887,0.887,0,0,0-.628-0.258Zm8.386,2.963a2.073,2.073,0,0,1,0-4.147h0a1.936,1.936,0,0,1,1.468.6,2.076,2.076,0,0,1-.667,3.383A2.1,2.1,0,0,1,13.918,16.978Zm0.006-2.963h0a0.978,0.978,0,0,0-.823.548,0.888,0.888,0,1,0,1.449-.291A0.9,0.9,0,0,0,13.924,14.015Zm-11.279.164a0.584,0.584,0,0,1-.25-0.056,0.592,0.592,0,0,1-.286-0.787,3.681,3.681,0,0,1,3.054-2.151L4.108,5.793a0.592,0.592,0,1,1,1.163-.227l1.091,5.578h9.423l1.807-6.771H4.29A4.354,4.354,0,0,1,.007.68,0.592,0.592,0,1,1,1.178.505,3.165,3.165,0,0,0,4.293,3.187h14.07a0.594,0.594,0,0,1,.573.745l-2.123,7.956a0.594,0.594,0,0,1-.573.44H5.885a0.043,0.043,0,0,0-.023,0,2.655,2.655,0,0,0-2.68,1.51A0.593,0.593,0,0,1,2.645,14.178Z" />
+              <svg class="user-nav__svg">
+                <use xlink:href="images/sprite.svg#icon-basket"></use>
               </svg>
 
               <span>0</span>
             </a>
-
           </div>
 
           <a class=" user-nav__item user-nav__item--menu" href="#">drop menu icon
-            <svg width="20.031" height="20.031" viewBox="0 0 20.031 20.031">
-              <path fill=" #ffffff"
-                d="M2.146,4.881A2.146,2.146,0,1,1,4.292,2.735,2.144,2.144,0,0,1,2.146,4.881Zm0,7.869A2.146,2.146,0,1,1,4.292,10.6,2.145,2.145,0,0,1,2.146,12.75Zm0,7.868a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,2.146,20.618ZM10.014,4.881A2.146,2.146,0,1,1,12.16,2.735,2.144,2.144,0,0,1,10.014,4.881Zm0,7.869A2.146,2.146,0,1,1,12.16,10.6,2.145,2.145,0,0,1,10.014,12.75Zm0,7.868a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,10.014,20.618ZM17.883,4.881a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,17.883,4.881Zm0,7.869A2.146,2.146,0,1,1,20.029,10.6,2.145,2.145,0,0,1,17.883,12.75Zm0,7.868a2.146,2.146,0,1,1,2.146-2.146A2.144,2.144,0,0,1,17.883,20.618Z"
-                transform="translate(0 -0.594)" />
+            <svg class="user-nav__svg user-nav__svg--color-white">
+              <use xlink:href="images/sprite.svg#icon-menu"></use>
             </svg>
           </a>
         </div>
@@ -154,7 +143,7 @@
               </li>
 
               <li class="bredcrumbs__item bredcrumbs__item--active">
-                <a class="bredcrumbs__link" href="#">About Us</a>
+                <span class="bredcrumbs__link" >About Us</span>
               </li>
             </ul>
           </div>
@@ -183,17 +172,17 @@
               </p>
 
               <ul class="about__advantages" id="someElement">
-                <li class="about__advantage advantage advantage--projects">
+                <li class="advantage advantage--projects">
                   <span class="advantage__num title count" data-value="520">520</span>+
                   <span class="advantage__text">Projects</span>
                 </li>
 
-                <li class="about__advantage advantage advantage--revenue">
+                <li class="advantage advantage--revenue">
                   $<span class="advantage__num title count" data-value="4">4</span>m
                   <span class="advantage__text">Revenue</span>
                 </li>
 
-                <li class="about__advantage advantage advantage--awards">
+                <li class="advantage advantage--awards">
                   <span class="advantage__num title count" data-value="250">250</span>
                   <span class="advantage__text">Awards</span>
                 </li>
