fix filter on product-grid page

--- a/app/product-grid.html
+++ b/app/product-grid.html
@@ -150,6 +150,46 @@
         </div>
       </section>
 
+      <div class="shop__catalog-filter filter-top">
+
+        <div class="filter-top__buttons">
+          <span class="filter-top__view">
+            View
+          </span>
+
+          <button class="filter-top__btn btn-grid filter-top__btn--active" type="button">
+
+            <svg class="filter-top__svg">
+              <use xlink:href="images/sprite.svg#icon-menu"></use>
+            </svg>
+
+          </button>
+
+          <button class="filter-top__btn btn-list" type="button">
+
+            <svg class="filter-top__svg">
+              <use xlink:href="images/sprite.svg#icon-list"></use>
+            </svg>
+
+          </button>
+        </div>
+
+        <div class="filter-top__selects">
+
+          <select class="filter-top__select">
+            <option class="filter-top__option">Sort By Default</option>
+            <option class="filter-top__option">Sort By Default</option>
+            <option class="filter-top__option">Sort By Default</option>
+          </select>
+
+          <select class="filter-top__select">
+            <option class="filter-top__option">Show 9</option>
+            <option class="filter-top__option">Show 9</option>
+            <option class="filter-top__option">Show 9</option>
+          </select>
+        </div>
+      </div>
+
       <section class="product-grid">
         <div class="container">
           <div class="product-grid__inner">
@@ -207,7 +247,7 @@
 
                   <h2 class="filter-aside__title">price</h2>
 
-                  <form class="filter-aside__form-price"  action="/" id="filter-price">
+                  <form class="filter-aside__form-price" action="/" id="filter-price">
                     <label class="filter-aside__label">
                       <input class="filter-aside__input-price" type="text" data-type="double" data-min="0"
                         data-max="1000" data-from="100" data-to="500">
@@ -358,11 +398,21 @@
                       </svg>
                     </button>
 
-                    <button class="product-card__icon  " type="button">it is like icon
+                    <button class="product-card__icon" type="button">it is like icon
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-heart"></use>
                       </svg>
                     </button>
+                  </div>
+
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    
+                    <div class="product-card__star" data-rateyo-rating="2"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
                   </div>
                 </article>
 
@@ -396,6 +446,14 @@
                       </svg>
                     </button>
                   </div>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star" data-rateyo-rating="4"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
+                  </div>
                 </article>
 
                 <article class="week__card product-card ">
@@ -428,6 +486,14 @@
                       </svg>
                     </button>
                   </div>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star" data-rateyo-rating="5"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
+                  </div>
                 </article>
 
                 <article class="week__card product-card ">
@@ -459,6 +525,14 @@
                         <use xlink:href="images/sprite.svg#icon-heart"></use>
                       </svg>
                     </button>
+                  </div>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star" data-rateyo-rating="3"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
                   </div>
                 </article>
 
@@ -492,6 +566,14 @@
                       </svg>
                     </button>
                   </div>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
+                  </div>
                 </article>
 
                 <article class="week__card product-card ">
@@ -524,6 +606,14 @@
                       </svg>
                     </button>
                   </div>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
+                  </div>
                 </article>
 
                 <article class="week__card product-card ">
@@ -554,6 +644,14 @@
                         <use xlink:href="images/sprite.svg#icon-heart"></use>
                       </svg>
                     </button>
+                  </div>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
                   </div>
                 </article>
 
@@ -587,6 +685,14 @@
                       </svg>
                     </button>
                   </div>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
+                  </div>
                 </article>
 
                 <article class="week__card product-card ">
@@ -600,24 +706,13 @@
                     <p class="product-card__price">$29.00</p>
                   </div>
 
-                  <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-search"></use>
-                      </svg>
-                    </a>
-
-                    <button class="product-card__icon  " type="button">it is basket icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-basket"></use>
-                      </svg>
-                    </button>
-
-                    <button class="product-card__icon  " type="button">it is like icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-heart"></use>
-                      </svg>
-                    </button>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
                   </div>
                 </article>
 
@@ -632,24 +727,13 @@
                     <p class="product-card__price">$29.00</p>
                   </div>
 
-                  <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-search"></use>
-                      </svg>
-                    </a>
-
-                    <button class="product-card__icon  " type="button">it is basket icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-basket"></use>
-                      </svg>
-                    </button>
-
-                    <button class="product-card__icon  " type="button">it is like icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-heart"></use>
-                      </svg>
-                    </button>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
                   </div>
                 </article>
 
@@ -664,24 +748,13 @@
                     <p class="product-card__price">$29.00</p>
                   </div>
 
-                  <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-search"></use>
-                      </svg>
-                    </a>
-
-                    <button class="product-card__icon  " type="button">it is basket icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-basket"></use>
-                      </svg>
-                    </button>
-
-                    <button class="product-card__icon  " type="button">it is like icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-heart"></use>
-                      </svg>
-                    </button>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
                   </div>
                 </article>
 
@@ -696,24 +769,13 @@
                     <p class="product-card__price">$29.00</p>
                   </div>
 
-                  <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-search"></use>
-                      </svg>
-                    </a>
-
-                    <button class="product-card__icon  " type="button">it is basket icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-basket"></use>
-                      </svg>
-                    </button>
-
-                    <button class="product-card__icon  " type="button">it is like icon
-                      <svg class="product-card__svg">
-                        <use xlink:href="images/sprite.svg#icon-heart"></use>
-                      </svg>
-                    </button>
+                  <div class="product-card__list">
+                    <div class="product-card__title">Wooden radio</div>
+                    <div class="product-card__star" data-rateyo-rating="1"></div>
+                    <div class="product-card__cost">23$</div>
+                    <div class="product-card__text">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</div>
+                    <a href="#" class="product-card__btn">Add to cart</a>
                   </div>
                 </article>
               </div>
