--- a/app/about-us.html
+++ b/app/about-us.html
@@ -53,7 +53,7 @@
           </li>
 
           <li class="header__item">
-            <a class="header__menu-link" href="#services">
+            <a class="header__menu-link" href="index.html#services">
               Services
             </a>
           </li>
@@ -67,7 +67,7 @@
                 <a class="drop-menu__link" href="product-grid.html">Product-list</a>
               </li>
               <li class="drop-menu__item">
-                <a class="drop-menu__link" href="#">item2</a>
+                <a class="drop-menu__link" href="blog-list.html">blog-list</a>
               </li>
               <li class="drop-menu__item">
                 <a class="drop-menu__link" href="#">item3</a>
