--- a/app/modules/_header/_header--main.html
+++ b/app/modules/_header/_header--main.html
@@ -49,7 +49,7 @@
                <a class="drop-menu__link" href="product-grid.html">Product-list</a>
              </li>
              <li class="drop-menu__item">
-               <a class="drop-menu__link" href="#">item2</a>
+               <a class="drop-menu__link" href="blog-list.html">Blog-list</a>
              </li>
              <li class="drop-menu__item">
                <a class="drop-menu__link" href="#">item3</a>
