--- a/app/modules/_new/_new.html
+++ b/app/modules/_new/_new.html
@@ -5,31 +5,31 @@
        <ul class="new__filters  filter">
 
          <li class="filter__item">
-           <button class="filter__btn mixitup-control-active" type="button" data-filter="all">
+           <button class="filter__btn new__btn mixitup-control-active" type="button" data-filter="all">
              All
            </button>
          </li>
 
          <li class="filter__item">
-           <button class="filter__btn" type="button" data-filter=".category-furnitures1">
+           <button class="filter__btn new__btn" type="button" data-filter=".category-furnitures1">
              Furnitures
            </button>
          </li>
 
          <li class="filter__item">
-           <button class="filter__btn" type="button" data-filter=".category-chairs1">
+           <button class="filter__btn new__btn" type="button" data-filter=".category-chairs1">
              Chairs
            </button>
          </li>
 
          <li class="filter__item">
-           <button class="filter__btn" type="button" data-filter=".category-lighting1">
+           <button class="filter__btn new__btn" type="button" data-filter=".category-lighting1">
              Lighting
            </button>
          </li>
 
          <li class="filter__item">
-           <button class="filter__btn" type="button" data-filter=".category-decor1">
+           <button class="filter__btn new__btn" type="button" data-filter=".category-decor1">
              Decor
            </button>
          </li>
