add contact login terms

--- a/app/modules/_header/_header--main.html
+++ b/app/modules/_header/_header--main.html
@@ -52,10 +52,10 @@
                <a class="drop-menu__link" href="blog-list.html">Blog-list</a>
              </li>
              <li class="drop-menu__item">
-               <a class="drop-menu__link" href="#">item3</a>
+               <a class="drop-menu__link" href="login.html">Login</a>
              </li>
              <li class="drop-menu__item">
-               <a class="drop-menu__link" href="#">item4</a>
+               <a class="drop-menu__link" href="terms.html">Terms&Conditions</a>
              </li>
            </ul>
          </li>
@@ -67,7 +67,7 @@
          </li>
 
          <li class="header__item">
-           <a class="header__menu-link" href="#footer">
+           <a class="header__menu-link" href="contact.html">
              Contact
            </a>
          </li>
