--- a/app/modules/_insights/_insights.html
+++ b/app/modules/_insights/_insights.html
@@ -9,7 +9,7 @@
       <div class="insights__inner ">
 
         <article class="insights-card">
-          <a class="insights-card__link" href="#">
+          <a class="insights-card__link" href="blog-list.html">
             <img class="insights-card__img" src="images/product/insights1.jpg" alt="insights-photo">
           </a>
 
@@ -34,7 +34,7 @@
         </article>
 
         <article class="insights-card">
-          <a class="insights-card__link" href="#">
+          <a class="insights-card__link" href="blog-list.html">
             <img class="insights-card__img" src="images/product/insights2.jpg" alt="insights-photo">
           </a>
 
@@ -60,7 +60,7 @@
         </article>
 
         <article class="insights-card">
-          <a class="insights-card__link" href="#">
+          <a class="insights-card__link" href="blog-list.html">
             <img class="insights-card__img" src="images/product/insights3.jpg" alt="insights-photo">
           </a>
 
