--- a/app/blog-list.html
+++ b/app/blog-list.html
@@ -26,7 +26,7 @@
 
         <ul class="header__menu-items">
 
-          <li class="header__item  drop-menu">
+          <li class="header__item drop-menu">
             <a class="header__menu-link " href="#">
               Home
             </a>
@@ -62,6 +62,7 @@
             <a class="header__menu-link" href="#">
               Pages
             </a>
+
             <ul class="drop-menu__list">
               <li class="drop-menu__item">
                 <a class="drop-menu__link" href="product-grid.html">Product-list</a>
@@ -70,10 +71,10 @@
                 <a class="drop-menu__link" href="blog-list.html">Blog-list</a>
               </li>
               <li class="drop-menu__item">
-                <a class="drop-menu__link" href="#">item3</a>
+                <a class="drop-menu__link" href="login.html">Login</a>
               </li>
               <li class="drop-menu__item">
-                <a class="drop-menu__link" href="#">item4</a>
+                <a class="drop-menu__link" href="terms.html">Terms&Conditions</a>
               </li>
             </ul>
           </li>
@@ -85,7 +86,7 @@
           </li>
 
           <li class="header__item">
-            <a class="header__menu-link" href="#footer">
+            <a class="header__menu-link" href="contact.html">
               Contact
             </a>
           </li>
@@ -139,7 +140,7 @@
             <ul class="bredcrumbs__list">
 
               <li class="bredcrumbs__item">
-                <a class="bredcrumbs__link" href="#">Home </a>
+                <a class="bredcrumbs__link" href="index.html">Home</a>
               </li>
 
               <li class="bredcrumbs__item bredcrumbs__item--active">
