--- a/app/modules/_footer/_footer.html
+++ b/app/modules/_footer/_footer.html
@@ -1,4 +1,4 @@
-  <footer class="footer" id="footer">
+  <footer class="footer">
     <div class="container">
       <div class="footer__inner">
         <div class="footer__col">
