--- a/app/product-grid.html
+++ b/app/product-grid.html
@@ -26,7 +26,7 @@
 
         <ul class="header__menu-items">
 
-          <li class="header__item drop-menu">
+          <li class="header__item header__item--active drop-menu">
             <a class="header__menu-link " href="#">
               Home
             </a>
@@ -58,10 +58,11 @@
             </a>
           </li>
 
-          <li class="header__item header__item--active drop-menu ">
+          <li class="header__item drop-menu">
             <a class="header__menu-link" href="#">
               Pages
             </a>
+            
             <ul class="drop-menu__list">
               <li class="drop-menu__item">
                 <a class="drop-menu__link" href="product-grid.html">Product-list</a>
@@ -70,10 +71,10 @@
                 <a class="drop-menu__link" href="blog-list.html">Blog-list</a>
               </li>
               <li class="drop-menu__item">
-                <a class="drop-menu__link" href="#">item3</a>
+                <a class="drop-menu__link" href="login.html">Login</a>
               </li>
               <li class="drop-menu__item">
-                <a class="drop-menu__link" href="#">item4</a>
+                <a class="drop-menu__link" href="terms.html">Terms&Conditions</a>
               </li>
             </ul>
           </li>
@@ -85,7 +86,7 @@
           </li>
 
           <li class="header__item">
-            <a class="header__menu-link" href="#footer">
+            <a class="header__menu-link" href="contact.html">
               Contact
             </a>
           </li>
@@ -393,7 +394,7 @@
                   </div>
 
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
@@ -435,7 +436,7 @@
                   </div>
 
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
@@ -475,7 +476,7 @@
                   </div>
 
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
@@ -515,7 +516,7 @@
                   </div>
 
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
@@ -555,7 +556,7 @@
                   </div>
 
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
@@ -595,7 +596,7 @@
                   </div>
 
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
@@ -634,7 +635,7 @@
                     <p class="product-card__price">$29.00</p>
                   </div>
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
@@ -674,7 +675,7 @@
                   </div>
 
                   <div class="product-card__links">
-                    <a class="product-card__icon " href="#">
+                    <a class="product-card__icon " href="product-details.html">
                       <svg class="product-card__svg">
                         <use xlink:href="images/sprite.svg#icon-search"></use>
                       </svg>
