product login contact

--- a/app/blog-list.html
+++ b/app/blog-list.html
@@ -74,7 +74,7 @@
                 <a class="drop-menu__link" href="login.html">Login</a>
               </li>
               <li class="drop-menu__item">
-                <a class="drop-menu__link" href="terms.html">Terms&Conditions</a>
+                <a class="drop-menu__link" href="therms.html">Terms&Conditions</a>
               </li>
             </ul>
           </li>
@@ -144,7 +144,7 @@
               </li>
 
               <li class="bredcrumbs__item bredcrumbs__item--active">
-                <span class="bredcrumbs__link">blog-list</span>
+                <span class="bredcrumbs__link">Blog</span>
               </li>
 
             </ul>
@@ -344,7 +344,7 @@
 
                 <label class="filter-aside__label">
 
-                  <input class="filter-aside__input visually-hidden" type="checkbox" checked="">
+                  <input class="filter-aside__input visually-hidden" type="checkbox" checked>
 
                   <span class="filter-aside__category">Chair</span>
 
@@ -385,7 +385,7 @@
 
               </form>
 
-              <div class="filter-aside">
+              <aside class="filter-aside">
 
                 <h2 class="filter-aside__title filter-aside__title--no-before">Recent Posts</h2>
 
@@ -464,7 +464,7 @@
                     </div>
                   </a>
                 </article>
-              </div>
+              </aside>
             </div>
           </div>
           <ul class="blog-list__pagination pagination">
