--- a/app/contact.html
+++ b/app/contact.html
@@ -212,18 +212,18 @@
             </address>
 
             <div class="contact__location">
-              <form class="blog-one__form-blog form-blog" action="/" id="blog-one__form-blog">
+              <form class="blog-one__form-blog form-blog contact__form-blog" action="/" id="blog-one__form-blog">
 
-                <div class="form-blog__row">
+                <div class="form-blog__row form-blog__row--contacts">
                   <label class="form-blog__label">
-                    <input class="form-blog__input" type="text" placeholder="Name">
+                    <input class="form-blog__input form-blog__input--contacts" type="text" placeholder="Name">
                     <svg class="form-blog__svg">
                       <use xlink:href="images/sprite.svg#icon-user"></use>
                     </svg>
                   </label>
 
                   <label class="form-blog__label">
-                    <input class="form-blog__input" type="email" placeholder="email">
+                    <input class="form-blog__input form-blog__input--contacts" type="email" placeholder="email">
                     <svg class="form-blog__svg">
                       <use xlink:href="images/sprite.svg#icon-mail"></use>
                     </svg>
@@ -231,13 +231,13 @@
                 </div>
 
                 <div class="form-blog__box">
-                  <textarea class="form-blog__textarea" placeholder="Comment"></textarea>
+                  <textarea class="form-blog__textarea form-blog__textarea--contacts" placeholder="Comment"></textarea>
                   <svg class="form-blog__svg">
                     <use xlink:href="images/sprite.svg#icon-chat"></use>
                   </svg>
                 </div>
 
-                <button class="form-blog__btn" type="submit">
+                <button class="form-blog__btn form-blog__btn--contacts" type="submit">
                   Post comment
                 </button>
               </form>
