--- a/app/product-details.html
+++ b/app/product-details.html
@@ -179,7 +179,7 @@
               <div class="product-details__big">
 
                 <div class="product-details__big-image">
-                  <img class="product-details__big-img" src="images/product/slider-big1.jpg" alt="lamp">
+                  <img class="product-details__big-img" src="images/product/slider-big2.jpeg" alt="lamp">
                 </div>
 
                 <div class="product-details__big-image">
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="product-details__big-image">
-                  <img class="product-details__big-img" src="images/product/slider-big1.jpg" alt="lamp">
+                  <img class="product-details__big-img" src="images/product/slider-big3.jpeg" alt="lamp">
                 </div>
 
                 <div class="product-details__big-image">
@@ -225,9 +225,9 @@
                 </li>
 
                 <li class="product-details__name">Tag:
-                  <span class="product-details__mark">
+                  <a class="product-details__teg" href="#">
                     Decorative
-                  </span>
+                  </a>
                 </li>
               </ul>
             </div>
