--- a/app/product-grid.html
+++ b/app/product-grid.html
@@ -255,7 +255,7 @@
                     <div class="filter-aside__title">price</div>
 
 
-                    <label class="filter-aside__label">
+                    <label class="filter-aside__label" id="filter-price">
                       <input class="filter-aside__input-price" type="text" data-type="double" data-min="0"
                         data-max="1000" data-from="100" data-to="500">
 
